# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.33

  - Fix for Bug#109808 (Bug#35021038), DatabaseMetaData#getPrimaryKeys should ordered by COLUMN_NAME.

  - Fix for Bug#109864 (Bug#35034666), Connector/J 8.0.32 hangs on MySQL 5.5 with prepared statements.

  - Fix for Bug#109807 (Bug#35021014), DatabaseMetaData#getTypeInfo should ordered by DATA_TYPE.

  - Fix for Bug#77368 (Bug#21321849), "LOAD DATA LOCAL INFILE" doesn't work properly with relative paths.

  - Fix for Bug#109243 (Bug#34852047), Judge whether the returned result set of the sql statement is incorrect.

  - WL#15490, Support OCI ephemeral key based authentication.

Version 8.0.32

  - Fix for Bug#104954 (Bug#33361205), MysqlDataSource fails to URL encode database name when constructing JDBC URL.
    Thanks to Jared Lundell for his contribution. 

  - Fix for Bug#102520 (Bug#32476663), serverSideStatementCache ignores resultSetType.

  - Fix for Bug#68608 (Bug#16690898), UpdatableResultSet does not properly handle unsigned primary key.

  - Fix for Bug#102678 (Bug#32536384), Connector/J 8 query with explain can not return ResultRow.

  - Fix for Bug#99604 (Bug#31612628), Add support to row alias on INSERT... ON DUPLICATE KEY UPDATE on batch mode.

  - Fix for Bug#105449 (Bug#33563505), connectionCollation ignored if characterEncoding is set.

  - Fix for Bug#108195 (Bug#34512212), Connector/J rejects UNION with CTE.

  - WL#15468, Upgrade 3rd party libraries and tools.

  - WL#15411, Upgrade Protocol Buffers dependency to protobuf-java-3.21.9.

  - Fix for Bug#108414 (Bug#34578541), Malformed packet generation for `COM_STMT_EXECUTE`.
    Thanks to Seongman Yang for his contribution.

  - Fix for Bug#106252 (Bug#33968169), Connector/J client hangs after prepare & execute process with old version server.
    Thanks to Zhe Huang for his contribution.

  - Fix for Bug#34725725, RPM and DEB builds broken after introducing javadoc for maven bundles.
